# delta_prediction

./: .gitignore  CMakeLists.txt  README.md  package.xml  prediction.rviz  validation.sh
Ego Vehicle/: EgoTrajPrediction.py  egoTraj_subscriber.py  odometry_subscribe.py
Ego_Vehicle/: EgoTrajPrediction.py  egoTraj_subscriber.py
launch/: ego_vehicle_prediction.launch  ego_vehicle_prediction_validation.launch  oncoming_vehicle_prediction.launch  oncoming_vehicle_prediction_offline.launch  oncoming_vehicle_prediction_validation.launch  oncoming_vehicle_validation_datacollection.launch  oncoming_vehicle_validation_offline.launch
msg/: EgoStateEstimate.msg  EgoStateEstimateArray.msg  OncomingVehicleTrajectory.msg  OncomingVehicleTrajectoryArray.msg
rviz/: prediction_rviz_test_v1.rviz  prediction_rviz_test_v2.rviz  prediction_rviz_test_v3.rviz
src/: collision_detection.py  ego_trajectory_prediction.py  ego_trajectory_subscriber.py  obstacles.py  odometry_subscribe.py  oncoming_trajectory_prediction.py  oncoming_trajectory_validation.py  utils.py
validation_dataset/: oncoming_vehicle.txt  prediction_test_v8.txt  prediction_test_v9.txt
